  server. The library now better recognises and distinguishes errors at the
  protocol and the application level. By encapsulating this in the ApiClient
  namespace layer, the other code can become more robust as it becomes less
  dependent on specific error codes (that changed form API v4 to v5).
- Introduced AcumulusException and AcumulusResponseException to handle
  communication errors.
- Code documentation: changed {@see ...} with external links to {@link ...}.


7.0.3 (2022-04-20) (WC only)
----------------------------
Bugs:
- PHP Fatal error:  Uncaught TypeError: Return value of ConfigStore::load() must
  be of the type array, bool returned in WooCommerce/Config/ConfigStore.php:16.

7.0.2 (2022-04-20) (WC only)
----------------------------
Bugs:
- WC: "Je site heeft een technisch probleem: Een fout van het type E_ERROR werd
  veroorzaakt op regelnummer 87 van het bestand .../Number.php. Foutmelding:
  Uncaught TypeError: Argument 1 passed to Number::floatsAreEqual() must be of
  the type float, string given, called in .../WooCommerce/Invoice/Creator.php on
  line 487 and ..."

7.0.1 (2022-04-19) (WC only)
----------------------------
Bugs:
- WC: "Je site heeft een technisch probleem: Een fout van het type E_ERROR werd
  veroorzaakt op regelnummer 76 van het bestand .../Number.php. Foutmelding:
  Uncaught TypeError: Argument 1 passed to Number::floatsAreEqual() must be of
  the type float, string given, called in .../WooCommerce/Invoice/Creator.php on
  line 436 and ..."

7.0.0 (2022-04-14) (WC only)
----------------------------
Note: Due to the large number of changes, especially the PHP7 strict typing
introduced in many places, this version has only been released for WooCommerce.
Other web shops will follow soon.

Bugs:
- ALL: Correcting 0% vat to vat free (one of the last phases during invoice
  completion) was not done when 0% is not allowed in the given situation.
- MA (possibly others as well): Free shipping on foreign invoices could get